--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -2,18 +2,23 @@ name: dynocsv # you probably want to 'snapcraft register <name>'
 version: '1.0.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Exports DynamoDB table into CSV # 79 char long summary
 description: |
-    Exports DynamoDB table into CSV, additionally can filter out the specific columns to be exported.
+  Exports DynamoDB table into CSV, additionally can filter out the specific columns to be exported and limit number of
+  items be exported.
 
+confinement: devmode # use 'strict' once you have the right plugs and slots
 base: core18
-confinement: strict # use 'strict' once you have the right plugs and slots
-grade: stable # must be 'stable' to release into candidate/stable channels
+#grade: stable # must be 'stable' to release into candidate/stable channels
+grade: devel
+license: MIT License
 
 parts:
   dynocsv:
     plugin: go
-    go-importpath: github.com/zshamrock/dynocsv
-    source: .
     source-type: git
+    source: https://github.com/zshamrock/dynocsv
+    go-importpath: github.com/zshamrock/dynocsv
+    build-packages:
+      - gcc
 
 apps:
   dynocsv:
