--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,7 +9,7 @@ confinement: devmode # use 'strict' once you have the right plugs and slots
 base: core18
 #grade: stable # must be 'stable' to release into candidate/stable channels
 grade: devel
-license: MIT License
+license: MIT
 
 parts:
   dynocsv:
