--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -2,8 +2,8 @@ name: dynocsv # you probably want to 'snapcraft register <name>'
 version: '1.0.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Exports DynamoDB table into CSV # 79 char long summary
 description: |
-  Exports DynamoDB table into CSV, additionally can filter out the specific columns to be exported and limit number of
-  items be exported.
+  Exports DynamoDB table into CSV, additionally can filter out the specific columns and limit number of items to be
+  exported.
 
 confinement: devmode # use 'strict' once you have the right plugs and slots
 base: core18
