--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -4,27 +4,18 @@ summary: Exports DynamoDB table into CSV # 79 char long summary
 description: |
   Exports DynamoDB table into CSV, additionally can filter out the specific columns and limit number of items to be exported.
 
-confinement: devmode # use 'strict' once you have the right plugs and slots
+confinement: classic # use 'strict' once you have the right plugs and slots
 base: core18
 #grade: stable # must be 'stable' to release into candidate/stable channels
-grade: devel
+grade: stable
 license: MIT
-
-plugs:
-  home:
-    read: all
-  aws:
-    interface: personal-files
-    read:
-      - $HOME/.aws/config
-      - $HOME/.aws/credentials
 
 parts:
   dynocsv:
     plugin: go
-#    source-type: git
+    #    source-type: git
     source-type: local
-#    source: https://github.com/zshamrock/dynocsv
+    #    source: https://github.com/zshamrock/dynocsv
     source: .
     go-importpath: github.com/zshamrock/dynocsv
     build-packages:
@@ -34,7 +25,3 @@ parts:
 apps:
   dynocsv:
     command: dynocsv
-    plugs:
-      - aws
-      - network
-      - desktop
