--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,6 +22,13 @@ parts:
       - gcc
       - git
 
+plugs:
+  aws-profile:
+    interface: personal-files
+    read:
+      - $HOME/.aws/config
+      - $HOME/.aws/credentials
+
 apps:
   dynocsv:
     command: dynocsv
@@ -29,3 +36,4 @@ apps:
       - network
       - removable-media
       - home
+      - aws-profile
