--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -2,7 +2,8 @@ name: dynocsv # you probably want to 'snapcraft register <name>'
 version: '1.1.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Exports DynamoDB table into CSV # 79 char long summary
 description: |
-  Exports DynamoDB table into CSV, additionally can filter out specific columns and limit the number of items to be exported.
+  Exports DynamoDB table into CSV, additionally can filter out specific columns and limit the number of items to be exported,
+  as well as query the data using hash and sort table's attributes.
 
   The tool relies on reading AWS profile config credentials (`$HOME/.aws`), so when installed you would need explicitly allow this access by running:
 
